--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.4.5",
-    "nodemon": "^2.0.19"
+    "mongoose": "^6.4.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon"
   },
   "author": "hillarys camilo",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
